--- a/kafka-messenger-ui/src/App.css
+++ b/kafka-messenger-ui/src/App.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
-  background-color: #f3f3f3;
+  background-color: #f3f3f3;  
 }
 
 .App-header {
@@ -45,6 +45,15 @@ form {
 }
 
 input[type="text"] {
+  flex: 1;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 20px;
+  border: 1px solid #ccc;
+  outline: none;
+}
+
+input[type="password"] {
   flex: 1;
   padding: 10px;
   margin: 10px;
