--- a/kafka-messenger-ui/src/App.css
+++ b/kafka-messenger-ui/src/App.css
@@ -24,8 +24,12 @@
   padding: 20px;
   border-radius: 8px;
   overflow-y: auto;
-  height: 400px;
+  height: 400px; /* Adjust the height as needed */
   box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+  display: flex;
+  flex-direction: column; /* Stack messages from top to bottom */
+  justify-content: flex-start; /* Start aligning items from the top */
+  align-items: flex-start;
 }
 
 .chat-window p {
@@ -74,4 +78,28 @@ button {
 
 button:hover {
   background-color: #0056b3;
+}
+
+.message.input {
+  align-self: flex-end; /* Align user's messages to the right */
+  background-color: #a631b0;
+}
+
+.message.websocket {
+  align-self: flex-start; /* Align WebSocket messages to the left */
+  background-color: #e7b7eb;
+}
+
+.message {
+  /* Style for all messages */
+  width: fit-content;
+  max-width: 80%;
+  padding: 10px;
+  border-radius: 20px;
+  margin: 10px;
+  background-color: #f0f0f0;
+}
+
+.chat-window p:first-child {
+  margin-top: auto;
 }
