--- a/kafka-messenger-ui/src/App.css
+++ b/kafka-messenger-ui/src/App.css
@@ -11,9 +11,7 @@
   align-items: stretch;
   min-height: 50vh;
   max-height: 100vh;
-  background-color: #f3f3f3;
-  overflow: hidden;
-  
+  overflow-x: hidden;
 }
 
 .App-header {
@@ -24,14 +22,13 @@
 }
 
 .chat-window {
-  width: 100%;
-  max-width: 80%;
+  width: 82%;
   background: white;
   margin: 20px;
   padding: 20px;
   border-radius: 8px;
   overflow-y: auto;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+  box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.1);
   display: flex;
   flex-direction: column; /* Stack messages from top to bottom */
   justify-content: flex-start; /* Start aligning items from the top */
@@ -41,27 +38,13 @@
   
 }
 
-form {
-
-  padding: 5px;
-  position: relative; 
-  bottom: 0;
-  width: 71%; /* Full width */
-  max-width: calc(100% - 300px); /* Full width minus chat list width */
-  background: #f3f3f3; /* Same as the app background for cohesion */
-  margin-left: 340px;
-  margin-top: -75px;
-  margin-right: 50px;
-
-}
-
 input[type="text"] {
 
   padding: 10px;
   border-radius: 20px;
   border: 1px solid #ccc;
   outline: none;
-  width:75%;
+
 }
 
 input[type="password"] {
@@ -115,7 +98,7 @@ button:hover {
 .chat-container {
   display: flex;
   flex-grow: 1;
-  width: 100%;
+  width: 400%;
   height: calc(100vh - var(--header-height)); /* Subtract header height */
 }
 
@@ -158,3 +141,29 @@ a {
     width: 100%;
   }
 }
+
+.chat-interface {
+  width: 21%;
+}
+
+
+.msg-input {
+ 
+  width: 80%;
+  border: 3px solid black;
+
+  padding: 10px;
+  margin: 10px;
+  border-radius: 20px;
+  border: 1px solid #ccc;
+  outline: none;
+  margin-left: 20px;
+}
+
+form {
+  max-width: 85%;
+  margin-left: 20px;
+  width: 100%;
+
+}
+
